[gd_scene load_steps=13 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Poppins-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/Poppins-SemiBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/icons/white/icon_itchio.svg" type="Texture" id=4]
[ext_resource path="res://assets/icons/white/icon_kofi.svg" type="Texture" id=5]
[ext_resource path="res://assets/icons/white/icon_world.svg" type="Texture" id=6]
[ext_resource path="res://assets/icons/white/icon_github.svg" type="Texture" id=7]
[ext_resource path="res://assets/icons/white/icon_gpl.svg" type="Texture" id=8]
[ext_resource path="res://src/dialogs/about_dialog/AboutDialog.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 23
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 14
extra_spacing_top = -5
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
extra_spacing_top = -3
font_data = ExtResource( 2 )

[node name="AboutDialog" type="AcceptDialog"]
visible = true
margin_right = 420.0
margin_bottom = 570.0
window_title = "About Generatory"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 404.0
margin_bottom = 148.0
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 18
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 18.0
margin_top = 10.0
margin_right = 394.0
margin_bottom = 138.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
texture = ExtResource( 1 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 132.0
margin_right = 376.0
margin_bottom = 128.0
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 15
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 15.0
margin_right = 234.0
margin_bottom = 118.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 224.0
margin_bottom = 34.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 135.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "generatory"

[node name="Label2" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 139.0
margin_top = 10.0
margin_right = 166.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 1, 1, 0.54902 )
text = "v0.1"

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 224.0
margin_bottom = 95.0
custom_colors/font_color = Color( 1, 1, 1, 0.658824 )
custom_fonts/font = SubResource( 2 )
text = "Generatory is a utility tool that helps you create grids, patterns and images on the go!"
autowrap = true

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_top = 148.0
margin_right = 404.0
margin_bottom = 526.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 0
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer2"]
margin_left = 5.0
margin_right = 399.0
margin_bottom = 373.0
custom_constants/separation = 10

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/MarginContainer2/VBoxContainer"]
margin_right = 394.0
margin_bottom = 280.0
size_flags_vertical = 3
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2

[node name="Button" type="Button" parent="VBoxContainer/MarginContainer2/VBoxContainer/GridContainer"]
margin_right = 192.0
margin_bottom = 135.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Github"
icon = ExtResource( 7 )

[node name="Button2" type="Button" parent="VBoxContainer/MarginContainer2/VBoxContainer/GridContainer"]
margin_left = 202.0
margin_right = 394.0
margin_bottom = 135.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "itch.io"
icon = ExtResource( 4 )

[node name="Button3" type="Button" parent="VBoxContainer/MarginContainer2/VBoxContainer/GridContainer"]
margin_top = 145.0
margin_right = 192.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Ko-fi"
icon = ExtResource( 5 )

[node name="Button4" type="Button" parent="VBoxContainer/MarginContainer2/VBoxContainer/GridContainer"]
margin_left = 202.0
margin_top = 145.0
margin_right = 394.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Website"
icon = ExtResource( 6 )

[node name="LicenseButton" type="Button" parent="VBoxContainer/MarginContainer2/VBoxContainer"]
margin_top = 290.0
margin_right = 394.0
margin_bottom = 320.0
toggle_mode = true
text = "License             "
icon = ExtResource( 8 )

[node name="LicenseField" type="TextEdit" parent="VBoxContainer/MarginContainer2/VBoxContainer"]
visible = false
margin_top = 120.0
margin_right = 394.0
margin_bottom = 320.0
rect_min_size = Vector2( 0, 200 )
text = "	Generatory
	Copyright (C) 2022 qewer33

	Generatory is free software: you can redistribute it and/or modify
	it under the terms of the GNU General Public License as published by
	the Free Software Foundation, either version 3 of the License, or
	(at your option) any later version.

	Generatory is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU General Public License for more details.

	You should have received a copy of the GNU General Public License
	along with this program.  If not, see <https://www.gnu.org/licenses/>."
readonly = true
smooth_scrolling = true

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer2/VBoxContainer"]
margin_top = 330.0
margin_right = 394.0
margin_bottom = 373.0
custom_colors/font_color = Color( 1, 1, 1, 0.658824 )
custom_fonts/font = SubResource( 3 )
text = "generatory is free/open source software. If you like it, please consider contributing or donating"
autowrap = true

[connection signal="pressed" from="VBoxContainer/MarginContainer2/VBoxContainer/LicenseButton" to="." method="_on_LicenseButton_pressed"]
